fix alignment

--- a/seventy-two/index.css
+++ b/seventy-two/index.css
@@ -158,6 +158,7 @@ body {
   flex-direction: column;
   gap: 20px;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .page.meditate-time input {
